--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   firebase_storage: ^11.1.0
   firebase_storage_web: ^3.4.0
   hexcolor: ^3.0.1
+  flutter_screenutil: ^5.6.1
+  flutter_zoom_drawer: ^3.0.4+1
+  file_picker: ^5.2.6
 
 dev_dependencies:
   flutter_test:
